--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           imageHeight: 120,
         });
 
-        text = "Happy Valentine's Day once again Madu! ";
+        text = "Happy Valentine's Day Madu! ";
         emotnama = "&#10084;";
         text2 =
           "May your days always be filled with Love! <br>Titip salam buat semua! <br>-NAJ ";
