--- a/index.html
+++ b/index.html
@@ -216,6 +216,15 @@
           imageHeight: 120,
         });
 
+        await swalst.fire({
+          title:
+            "Mohon maaf yah, kalau mungkin selama ini udh buat kamu sedih... maaf banget",
+          imageUrl:
+            "https://media.tenor.com/oWxP5sU_EisAAAAM/mochi-peachcat.gif",
+          imageWidth: 120,
+          imageHeight: 120,
+        });
+
         text = "Happy Valentine's Day Madu! ";
         emotnama = "&#10084;";
         text2 =
