--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           imageHeight: 120,
         });
         await swalst.fire({
-          title: "Btw, hari ini hari spesial lho!😁 &#129402;",
+          title: "Btw, hari ini hari spesial lho!😁;",
           imageUrl:
             "https://c.tenor.com/906nGAL7Xw0AAAAj/mochi-peachcat-cute-cat.gif",
           imageWidth: 120,
